force-app/main/default/objects/Case/fields/FS_New_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_New_Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JDE Linkage Request</fullName>
            </value>
            <value>
                <fullName>JDE Initiated AMOA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>