force-app/main/default/objects/Case/fields/FS_Next_Status_Descr__c.field-meta.xml
<CustomField>
    <fullName>FS_Next_Status_Descr__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Next_Status_Descr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Status Description</label>
    <type>Text</type>
</CustomField>