force-app/main/default/objects/Case/fields/FS_of_days_data_posted__c.field-meta.xml
<CustomField>
    <fullName>FS_of_days_data_posted__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_of_days_data_posted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Days Data Posted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>