force-app/main/default/objects/Case/fields/FS_Order_Type_Descr__c.field-meta.xml
<CustomField>
    <fullName>FS_Order_Type_Descr__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Order_Type_Descr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Type Description</label>
    <type>Text</type>
</CustomField>