force-app/main/default/objects/Case/fields/FS_Outlet_Dispenser__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Dispenser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>To find OD Reference, Click on Search Icon to find OD Record by Serial# or ACN#</inlineHelpText>
    <label>OD Reference (Customer ACN)</label>
    <referenceTo>FS_Outlet_Dispenser__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>