force-app/main/default/objects/Case/fields/FS_Outlet_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Name__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Name1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet Name</label>
    <type>Text</type>
</CustomField>