force-app/main/default/objects/Case/fields/FS_Platform_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Platform_Type__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Equip_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platform Type</label>
    <type>Text</type>
</CustomField>