force-app/main/default/objects/Case/fields/FS_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Registration_Date__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Date_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>