force-app/main/default/objects/Case/fields/FS_Related_Installation__c.field-meta.xml
<CustomField>
    <fullName>FS_Related_Installation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Installation</label>
    <referenceTo>FS_Installation__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>