force-app/main/default/objects/Case/fields/FS_Resolution_Comments__c.field-meta.xml
<CustomField>
    <fullName>FS_Resolution_Comments__c</fullName>
    <label>Resolution Comments</label>
    <type>TextArea</type>
</CustomField>