force-app/main/default/objects/Case/fields/FS_Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Resolution_Type__c</fullName>
    <description>Created for FACT Cases</description>
    <inlineHelpText>Select Resolution Type when Status is changed to Closed</inlineHelpText>
    <label>Resolution Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booster</fullName>
            </value>
            <value>
                <fullName>Dispenser Enrolled</fullName>
            </value>
            <value>
                <fullName>Enrolled to wrong ACN Number</fullName>
            </value>
            <value>
                <fullName>External Modem</fullName>
            </value>
            <value>
                <fullName>Flavor Change</fullName>
            </value>
            <value>
                <fullName>Hide/Show Water</fullName>
            </value>
            <value>
                <fullName>Manual Software Update</fullName>
            </value>
            <value>
                <fullName>No Signal-Needs Hardwire</fullName>
            </value>
            <value>
                <fullName>OTA Update Needed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Re-linkage and Enrollment</fullName>
            </value>
            <value>
                <fullName>Reporting with Wrong SAP Number</fullName>
            </value>
            <value>
                <fullName>Serial Number Exception</fullName>
            </value>
            <value>
                <fullName>Custom USB</fullName>
                <isActive>false</isActive>
                <label>Custom USB</label>
            </value>
            <value>
                <fullName>Retrigger OTA Updates</fullName>
                <isActive>false</isActive>
                <label>Retrigger OTA Updates</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>