force-app/main/default/objects/Case/fields/FS_Response_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>FS_Response_Email_Body__c</fullName>
    <label>FS Response Email Body</label>
    <type>TextArea</type>
</CustomField>