force-app/main/default/objects/Case/fields/FS_Static_Active_Inactive__c.field-meta.xml
<CustomField>
    <fullName>FS_Static_Active_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Value at Dispenser level when case was created</inlineHelpText>
    <label>Static Active/Inactive</label>
    <type>Checkbox</type>
</CustomField>