force-app/main/default/objects/Case/fields/FS_Static_Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Static_Bundle_Name__c</fullName>
    <inlineHelpText>Value at Dispenser level when case was created</inlineHelpText>
    <label>Static Bundle Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>