force-app/main/default/objects/Case/fields/FS_Static_Install_status__c.field-meta.xml
<CustomField>
    <fullName>FS_Static_Install_status__c</fullName>
    <inlineHelpText>Value at Dispenser level when case was created</inlineHelpText>
    <label>Static Install Base Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>