force-app/main/default/objects/Case/fields/FS_Static_Last_Pour_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Static_Last_Pour_Date__c</fullName>
    <description>Static field which will be populated from Outlet Dispenser</description>
    <inlineHelpText>Value at Dispenser level when case was created</inlineHelpText>
    <label>Static Last Pour Date</label>
    <type>Date</type>
</CustomField>