force-app/main/default/objects/Case/fields/FS_Static_Last_Seen_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Static_Last_Seen_Date__c</fullName>
    <inlineHelpText>Value at Dispenser level when case was created</inlineHelpText>
    <label>Static AW Last Seen Date</label>
    <type>Date</type>
</CustomField>