force-app/main/default/objects/Case/fields/FS_Static_Modem_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Static_Modem_Number__c</fullName>
    <inlineHelpText>Value at Dispenser level when case was created</inlineHelpText>
    <label>Static Modem Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>