force-app/main/default/objects/Case/fields/FS_Valid_Fill__c.field-meta.xml
<CustomField>
    <fullName>FS_Valid_Fill__c</fullName>
    <formula>TEXT(FS_Outlet_Dispenser__r.FS_Valid_Fill__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid Fill</label>
    <type>Text</type>
</CustomField>