force-app/main/default/objects/Case/fields/GCCompleted__c.field-meta.xml
<CustomField>
    <fullName>GCCompleted__c</fullName>
    <formula>IF((TEXT(Status)==&#39;Escalated&#39;&amp;&amp;TEXT(Sub_Status__c)==&#39;GC Completed&#39;),(RollupGCCompleted__c+((NOW()-Last_Status_Change__c)*1440)),RollupGCCompleted__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StatusGCCompletedInMinute</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>