force-app/main/default/objects/Case/fields/GCInProgress__c.field-meta.xml
<CustomField>
    <fullName>GCInProgress__c</fullName>
    <formula>IF((TEXT(Status)==&#39;Escalated&#39;&amp;&amp;TEXT(Sub_Status__c)==&#39;GC In Progress&#39;),(RollupGCInProgress__c +((NOW()-Last_Status_Change__c)*1440)),RollupGCInProgress__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StatusGCInProgressInMinutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>