force-app/main/default/objects/Case/fields/GCOnHold__c.field-meta.xml
<CustomField>
    <fullName>GCOnHold__c</fullName>
    <formula>IF((TEXT(Status)==&#39;Escalated&#39;&amp;&amp;TEXT(Sub_Status__c)==&#39;GC on Hold&#39;),(RollupGCOnHold__c+((NOW()-Last_Status_Change__c)*1440)),RollupGCOnHold__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StatusGCOnHoldInMinutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>