force-app/main/default/objects/Case/fields/Global_Center_Esca__c.field-meta.xml
<CustomField>
    <fullName>Global_Center_Esca__c</fullName>
    <label>Global Center Escalation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non Field Repairable</fullName>
            </value>
            <value>
                <fullName>Not Valid Escalation</fullName>
            </value>
            <value>
                <fullName>Parts Inquiry</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Trending Issue</fullName>
            </value>
            <value>
                <fullName>Quality &amp; Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>