force-app/main/default/objects/Case/fields/Install_Base_Status_Changed__c.field-meta.xml
<CustomField>
    <fullName>Install_Base_Status_Changed__c</fullName>
    <formula>Not(FS_Static_Install_status__c == FS_Install_status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Install Base Status Changed</label>
    <type>Checkbox</type>
</CustomField>