force-app/main/default/objects/Case/fields/IP_Address_Changed__c.field-meta.xml
<CustomField>
    <fullName>IP_Address_Changed__c</fullName>
    <formula>Not(FS_Static_IP_Address__c == FS_IP_Address__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IP Address Changed</label>
    <type>Checkbox</type>
</CustomField>