force-app/main/default/objects/Case/fields/Issue_Name__c.field-meta.xml
<CustomField>
    <fullName>Issue_Name__c</fullName>
    <inlineHelpText>Please give a brief descriptive name of the issue</inlineHelpText>
    <label>Issue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>