force-app/main/default/objects/Case/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HIO</fullName>
            </value>
            <value>
                <fullName>STA Request</fullName>
            </value>
            <value>
                <fullName>FSGC</fullName>
            </value>
            <value>
                <fullName>Connectivity</fullName>
            </value>
            <value>
                <fullName>Agent Proactive</fullName>
            </value>
            <value>
                <fullName>Questions/Inquires</fullName>
            </value>
            <value>
                <fullName>FA Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>