force-app/main/default/objects/Case/fields/JDEAMSOnHold__c.field-meta.xml
<CustomField>
    <fullName>JDEAMSOnHold__c</fullName>
    <formula>IF((TEXT(Status)==&#39;Assigned&#39;&amp;&amp; TEXT(LM_Sub_Status__c)==&#39;JDE AMS on Hold&#39;),(	RollupAMSOnHold__c+((NOW()-Last_Status_Change__c)*1440)),RollupAMSOnHold__c)</formula>
    <label>StatusJDEAMSOnHold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>