force-app/main/default/objects/Case/fields/JDEBaseNotified_Mins__c.field-meta.xml
<CustomField>
    <fullName>JDEBaseNotified_Mins__c</fullName>
    <formula>IF((TEXT(Status)==&#39;Assigned&#39;&amp;&amp; TEXT(LM_Sub_Status__c)==&#39;JDE Install Base Notified&#39;),(	RollUpJDEBaseNotified__c+((NOW()-Last_Status_Change__c)*1440)),RollUpJDEBaseNotified__c)</formula>
    <label>JDEBaseNotified Mins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>