force-app/main/default/objects/Case/fields/Knowledge_Base_Status__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Base_Status__c</fullName>
    <label>Knowledge Base Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Eligible</fullName>
                <default>true</default>
                <label>Not Eligible</label>
            </value>
            <value>
                <fullName>Eligible - pending creation</fullName>
            </value>
            <value>
                <fullName>Added to Knowledge base</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>