force-app/main/default/objects/Case/fields/LM_ACN__c.field-meta.xml
<CustomField>
    <fullName>LM_ACN__c</fullName>
    <formula>To_Account__r.FS_ACN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LM ACN</label>
    <type>Text</type>
</CustomField>