force-app/main/default/objects/Case/fields/LM_Address__c.field-meta.xml
<CustomField>
    <fullName>LM_Address__c</fullName>
    <formula>To_Account__r.CCR_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LM Address</label>
    <type>Text</type>
</CustomField>