force-app/main/default/objects/Case/fields/LM_Case__c.field-meta.xml
<CustomField>
    <fullName>LM_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linkage Management Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>FACT Cases</relationshipLabel>
    <relationshipName>FACTCases</relationshipName>
    <type>Lookup</type>
</CustomField>