force-app/main/default/objects/Case/fields/LM_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>LM_Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>JDE AMS on Hold</fullName>
            </value>
            <value>
                <fullName>Account Team on Hold</fullName>
            </value>
            <value>
                <fullName>Finance on Hold</fullName>
            </value>
            <value>
                <fullName>Pending Install</fullName>
            </value>
            <value>
                <fullName>JDE Install Base Notified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>