force-app/main/default/objects/Case/fields/Modem_Number_Changed__c.field-meta.xml
<CustomField>
    <fullName>Modem_Number_Changed__c</fullName>
    <formula>Not(FS_Static_Modem_Number__c == FS_Modem_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modem Number Changed</label>
    <type>Checkbox</type>
</CustomField>