force-app/main/default/objects/Case/fields/New_Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>New_Case_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Case Comment</label>
    <type>Checkbox</type>
</CustomField>