force-app/main/default/objects/Case/fields/New_Case_Comment_Global_Center__c.field-meta.xml
<CustomField>
    <fullName>New_Case_Comment_Global_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Case Comment Global Center</label>
    <type>Checkbox</type>
</CustomField>