force-app/main/default/objects/Case/fields/No_Activity_days__c.field-meta.xml
<CustomField>
    <fullName>No_Activity_days__c</fullName>
    <formula>Text(No_Activity_Days_Count__c) &amp; &#39; Days&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Activity days</label>
    <type>Text</type>
</CustomField>