force-app/main/default/objects/Case/fields/No_Activity_Days_Count__c.field-meta.xml
<CustomField>
    <fullName>No_Activity_Days_Count__c</fullName>
    <formula>(CASE(MOD( DATEVALUE(FS_FinalCustomLastModifiedDate__c)- DATE(1985,06,24),7), 
0 , CASE( MOD( TODAY()- DATEVALUE(FS_FinalCustomLastModifiedDate__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( TODAY()-DATEVALUE(FS_FinalCustomLastModifiedDate__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( TODAY()-DATEVALUE(FS_FinalCustomLastModifiedDate__c),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( TODAY()- DATEVALUE(FS_FinalCustomLastModifiedDate__c),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( TODAY()-DATEVALUE(FS_FinalCustomLastModifiedDate__c),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( TODAY()-DATEVALUE(FS_FinalCustomLastModifiedDate__c),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( TODAY()-DATEVALUE(FS_FinalCustomLastModifiedDate__c),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( TODAY()-DATEVALUE(FS_FinalCustomLastModifiedDate__c))/7)*5))-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Activity Days Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>