force-app/main/default/objects/Case/fields/Pending_Install_Mins__c.field-meta.xml
<CustomField>
    <fullName>Pending_Install_Mins__c</fullName>
    <formula>IF((TEXT(Status)==&#39;Assigned&#39;&amp;&amp; TEXT(LM_Sub_Status__c)==&#39;Pending Install&#39;),(	RollUpPendingInstall__c+((NOW()-Last_Status_Change__c)*1440)),RollUpPendingInstall__c)</formula>
    <label>Pending Install Mins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>