force-app/main/default/objects/Case/fields/Project_Batch_ID_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Batch_ID_Date__c</fullName>
    <label>Project Batch ID Date</label>
    <type>Date</type>
</CustomField>