force-app/main/default/objects/Case/fields/Related_Installation_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Installation_ID__c</fullName>
    <label>Related Installation ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>