force-app/main/default/objects/Case/fields/Related_Installation_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Installation_Name__c</fullName>
    <label>Related Installation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>