force-app/main/default/objects/Case/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select individual making the request.  Their information will be made available on the case.</inlineHelpText>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>