force-app/main/default/objects/Case/fields/Requestor_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Cell_Phone__c</fullName>
    <formula>Requestor__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requestor Cell Phone</label>
    <type>Text</type>
</CustomField>