force-app/main/default/objects/Case/fields/RollupGCCompleted__c.field-meta.xml
<CustomField>
    <fullName>RollupGCCompleted__c</fullName>
    <label>RollupGCCompleted</label>
    <summarizedField>Case_Status_History_Detail__c.Duration__c</summarizedField>
    <summaryFilterItems>
        <field>Case_Status_History_Detail__c.Status__c</field>
        <operation>equals</operation>
        <value>Escalated</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Case_Status_History_Detail__c.Sub_Status__c</field>
        <operation>equals</operation>
        <value>GC Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Case_Status_History_Detail__c.Parent_Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>